# FYS4411

./: .gitignore  README.md
Project1/: CMakeLists.txt  Exercise_e0.300000dat  Exercise_e0.400000dat  Exercise_e0.500000dat  Exercise_e0.600000dat  Exercise_e0.700000dat  README.md  main.cpp  sampler.cpp  sampler.h  system.cpp  system.h  vmc
Project1/Hamiltonians/: hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
Project1/InitialStates/: randomuniform.cpp
Project1/Python/: Variational_Monte_Carlo.ipynb  blocking.py  bootstrap.py  hist.py
Project1/Python/.ipynb_checkpoints/: Variational_Monte_Carlo-checkpoint.ipynb
Project1/Python/Results/Task_a/: variational_alpha.pgf
Project1/Python/Results/Task_b/: analytical_vs_numerical.pgf  (+1 more)
Project1/WaveFunctions/: simplegaussian.cpp  simplegaussian.h  wavefunction.h
Project2/: README.md
Project2/Code/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  compile_project  main.cpp  sampler.cpp  sampler.h  system.cpp  system.h  vmc
Project2/Code/Eigen/: Dense
Project2/Code/Hamiltonians/: hamiltonian.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
Project2/Code/InitialStates/: initialstate.h  randomuniform.cpp  randomuniform.h
Project2/Code/NeuralNetwork/: network.cpp  network.h  neuralnetwork.h
Project2/Code/NeuralNetworks/: network.cpp  network.h  neuralnetwork.cpp  neuralnetwork.h
Project2/Code/Python/: Restricted_Boltzmann_Machine.ipynb
Project2/Code/Python/Results/Brute_Force/: .Energies_eta_10^-2.dat.swo
Project2/Code/Python/Results/Task_c/: brutevsImp_100.pgf  brutevsImp_100_1.pgf  brutevsImp_100_2.pgf  brutevsImp_10_1.pgf  brutevsImp_10_2.pgf  brutevsImp_1_1.pgf  brutevsImp_1_2.pgf  brutevsImp_500_1.pgf  brutevsImp_500_2.pgf
Project2/Code/Python/statistical_tools/: blocking.py
Project2/Code/WaveFunctions/: neuralquantumstate.cpp  neuralquantumstate.h  wavefunction.h
Project2/parallell_code/: CMakeLists.txt  compile_project  jobscript  main.cpp  main.h  sampler.cpp  sampler.h  system.cpp  vmc
(+15 files in other folders)
